# EasyGraphics

./: .gitignore  CMakeLists.txt  README.md  main.cc
documentation/: Quickstart.md
example/: Calculator.cc  CalculatorAnimation.cc  CalculatorIm.cc  EliminatingGame.cc  Quickstart.cc
font/: font.cc  font16.c  font20.c  font24.c  font28.c  font32.c  font40.c  font48.c
include/: Animation.hh  Element.hh  Event.hh  Grid.hh  ImGui.hh  Label.hh  LinearType.hh  OverlapPanel.hh  Render.hh  Timer.hh
linux/: LinuxRender.cc  LinuxRender.hh
system/: SystemIO.cc  SystemIO.hh
windows/: EasyGraphics.aps  EasyGraphics.rc  Resource.h  WinRender.cc  WinRender.hh
